<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  
  <groupId>mc.rellox</groupId>
  <artifactId>SpawnerMeta</artifactId>
  <version>25.5</version>
  <packaging>jar</packaging>
  
  <name>SpawnerMeta</name>
  <description>Implements spawner customization and upgrading</description>
  
  <properties>
    <java.version>21</java.version>
  </properties>
  
  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
    <repository>
      <id>spigot-repo</id>
      <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
    </repository>
    <repository>
      <id>bg-repo</id>
      <url>https://repo.bg-software.com/repository/api/</url>
    </repository>
    <repository>
      <id>rosewood-repo</id>
      <url>https://repo.rosewooddev.io/repository/public/</url>
    </repository>
    <repository>
      <id>papermc</id>
      <url>https://repo.papermc.io/repository/maven-public/</url>
    </repository>
    <repository>
      <id>enginehub-maven</id>
      <url>https://maven.enginehub.org/repo/</url>
    </repository>
    <repository>
      <id>tcoded-releases</id>
      <url>https://repo.tcoded.com/releases</url>
    </repository>
  </repositories>
    
  <dependencies>
    <dependency>
      <groupId>org.spigotmc</groupId>
      <artifactId>spigot-api</artifactId>
      <version>1.21.11-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.github.brcdev-minecraft</groupId>
      <artifactId>shopgui-api</artifactId>
      <version>3.0.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.github.MilkBowl</groupId>
      <artifactId>VaultAPI</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.bgsoftware</groupId>
      <artifactId>WildStackerAPI</artifactId>
      <version>2025.2</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.bgsoftware</groupId>
      <artifactId>WildToolsAPI</artifactId>
      <version>2025.2</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.bgsoftware</groupId>
      <artifactId>SuperiorSkyblockAPI</artifactId>
      <version>2025.2</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.black_ixx</groupId>
      <artifactId>playerpoints</artifactId>
      <version>3.3.0</version>
         <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.intellectualsites.plotsquared</groupId>
      <artifactId>plotsquared-core</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.sk89q.worldedit</groupId>
      <artifactId>worldedit-core</artifactId>
      <version>7.3.17-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.github.GriefPrevention</groupId>
      <artifactId>GriefPrevention</artifactId>
      <version>16.18.2</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.tcoded</groupId>
      <artifactId>FoliaLib</artifactId>
      <version>0.5.1</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>io.github.rvskele</groupId>
      <artifactId>PaperLib</artifactId>
      <version>2.1.0</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.bstats</groupId>
      <artifactId>bstats-bukkit</artifactId>
      <scope>compile</scope>
    </dependency>
  </dependencies>
  
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.intellectualsites.bom</groupId>
        <artifactId>bom-newest</artifactId>
        <version>1.52</version>
        <scope>import</scope>
        <type>pom</type>
      </dependency>
    </dependencies>
  </dependencyManagement>
  
  <build>
    <sourceDirectory>src/main/java</sourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <encoding>ISO-8859-1</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.6.0</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <createDependencyReducedPom>false</createDependencyReducedPom>
          <relocations>
            <relocation>
              <pattern>com.tcoded.folialib</pattern>
              <shadedPattern>mc.rellox.spawnermeta.lib.folialib</shadedPattern>
            </relocation>
            <relocation>
              <pattern>io.github.rvskele.paperlib</pattern>
              <shadedPattern>mc.rellox.spawnermeta.lib.paperlib</shadedPattern>
            </relocation>
            <relocation>
              <pattern>org.bstats</pattern>
              <shadedPattern>mc.rellox.spawnermeta.lib.bstats</shadedPattern>
            </relocation>
          </relocations>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
